--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,17 @@ dependencies:
  - python=3.8.11
  - pip
  - pip:
-   - streamlit
-   - requests
-   - pyyaml
+     - streamlit
+     - requests
+     - pyyaml
+     - psycopg2
+     - python-dotenv
+     - openai
+     - pandas
+     - numpy
+     - pgvector
+     - langchain
+     - docx2txt
+     - docx2pdf
+     - tiktoken
+     - scikit-learn
