--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
      - streamlit
      - requests
      - pyyaml
-     - psycopg2
+     - psycopg2-binary
      - python-dotenv
      - openai
      - pandas
